# CMakeTest

Windows(VS2015)/: README.md
Windows(VS2015)/CMakeTest LinkLib/src/: CMakeLists.txt  anttweakbar.hpp  font.cpp  font.h  main.cpp
Windows(VS2015)/CMakeTest Simple/: CMakeLists.txt
Windows(VS2015)/CMakeTest Simple/src/: CMakeLists.txt  main.cpp
folders/: CMakeLists.txt
folders/src/: CMakeLists.txt  main.cpp
folders/src/mod1/: CMakeLists.txt  mod1.cpp  mod1.hpp
folders/vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Folders.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
folders/vs2015/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
folders/vs2015/src/: Folders.vcxproj  Folders.vcxproj.filters  cmake_install.cmake
folders/vs2015/src/Debug/: Folders.ilk
folders/vs2015/src/Folders.dir/Debug/Folders.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
folders/vs2015/src/mod1/: Mod1.vcxproj  Mod1.vcxproj.filters  cmake_install.cmake
folders/vs2015/src/mod1/Debug/: Mod1.lib
if-else/: CMakeLists.txt
if-else/src/: CMakeLists.txt
if-else/src/print/: print.cpp  print.hpp
if-else/vs2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Hoge.sdf  Hoge.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
if-else/vs2015/src/: Hoge.vcxproj  Hoge.vcxproj.filters  cmake_install.cmake
(+10 files in other folders)
